--- a/css/styles.css
+++ b/css/styles.css
@@ -75,8 +75,12 @@ footer a {
 ====================*/		
 @media screen and (max-width: 480px) {
 	body {
-	background: blue;	
+	background: blue;
+	}
+	aside {
+	float: none;	
 		}
+	
 	}	
 /*end of phone*/	
 	
